--- a/CustomViewPractice/app/src/main/res/values/attrs.xml
+++ b/CustomViewPractice/app/src/main/res/values/attrs.xml
@@ -3,4 +3,8 @@
     <declare-styleable name="AgainstMultiClickButton">
         <attr name="interval" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="BannerImageViewLayout">
+        <attr name="switch_interval" format="integer" />
+    </declare-styleable>
 </resources>
